Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115476

QPdfPageSelector doesn't actually handle non-numeric page label input

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.6.0 Beta3, 6.7.0 FF
    • 6.6.0 FF
    • PDF
    • None
    • c43978661 (dev), fb47deb92 (6.6)

      It can display page labels from such PDF files, but if you type in a non-numeric page label, it won't jump to that page. That's apparently because QPdfPageSelector::validate() is not overridden from the base class.

        For Gerrit Dashboard: QTBUG-115476
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            srutledg Shawn Rutledge
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes